sistemate scritte e spostati bottoni al lato, inizio parte BONUS

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
 
                 <div class="wrapper-img">
                     <img src="${key.image}">
-                    <p class="title">${key.title}</p>
-                    <p>${key.text}</p>
-                </div>
+                    <div class="content">
+                        <h2 class="content-title">${key.title}</h2>
+                        <p class="content-text">${key.text}</p>
+                    </div>
+                </div>;
+                
                 <!-- 
 
                 <div class="wrapper-img">
