inseriti pulsanti stop carosello e avvio, ma una volta avviato non si blocca piu

--- a/BONUS_2/index.html
+++ b/BONUS_2/index.html
@@ -65,6 +65,9 @@
 
         <button id="prev" class="btn1"><i class="fa-solid fa-chevron-up"></i></button>
         <button id="next" class="btn2"><i class="fa-solid fa-chevron-down"></i></button>
+        <button id="fermaCarosello" class="btn3">STOP</button>
+        <button id="avviaCarosello" class="btn4">GO</button>
+
 
     </div>
     <script type="text/javascript" src="js/main.js"></script>
