--- a/BONUS_2/index.html
+++ b/BONUS_2/index.html
@@ -66,7 +66,7 @@
         <button id="prev" class="btn1"><i class="fa-solid fa-chevron-up"></i></button>
         <button id="next" class="btn2"><i class="fa-solid fa-chevron-down"></i></button>
         <button id="fermaCarosello" class="btn3">STOP</button>
-        <button id="avviaCarosello" class="btn4">GO</button>
+        <button id="reverse" class="btn4">R</button>
 
 
     </div>
